tests/corpus/snapshots/if-else-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 10,
  "d": [
    "$25",
    "$40",
    "$40",
    "$1b",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$102c",
  "flags": "X:1 N:0 Z:0 V:0 C:1",
  "output": "",
  "memory": "b4da8908e1222325"
}
