tests/corpus/snapshots/if-else-1.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "entry": "$1000",
  "instructions": [
    {
      "address": "$1000",
      "line": 0,
      "text": "move.l #$25,d0"
    },
    {
      "address": "$1004",
      "line": 1,
      "text": "move.l #$40,d1"
    },
    {
      "address": "$1008",
      "line": 3,
      "text": "cmp.l d1,d0"
    },
    {
      "address": "$100c",
      "line": 4,
      "text": "bge $1018"
    },
    {
      "address": "$1010",
      "line": 5,
      "text": "move.l d1,d2"
    },
    {
      "address": "$1014",
      "line": 6,
      "text": "bra $101c"
    },
    {
      "address": "$1018",
      "line": 8,
      "text": "move.l d0,d2"
    },
    {
      "address": "$101c",
      "line": 11,
      "text": "move.l d0,d3"
    },
    {
      "address": "$1020",
      "line": 12,
      "text": "sub.l d1,d3"
    },
    {
      "address": "$1024",
      "line": 13,
      "text": "bpl $102c"
    },
    {
      "address": "$1028",
      "line": 14,
      "text": "neg.l d3"
    }
  ],
  "memory": [],
  "labels": {
    "a_is_bigger": {
      "address": "$1018",
      "line": 7
    },
    "done": {
      "address": "$101c",
      "line": 9
    },
    "positive": {
      "address": "$102c",
      "line": 15
    }
  }
}
