tests/corpus/snapshots/jump-table-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 11,
  "d": [
    "$6",
    "$3",
    "$2",
    "$8",
    "$12",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$2000",
    "$1038",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1050",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "ad0cce9ecd3dc245"
}
