tests/corpus/snapshots/keyboard-control-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "limit",
  "steps": 200000,
  "d": [
    "$13",
    "$0",
    "$dc",
    "$140",
    "$104",
    "$dc",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$1118",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1100",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "0316fa7ee3d2d656"
}
