tests/corpus/snapshots/mouse-paint-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "limit",
  "steps": 200000,
  "d": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$10b0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1020",
  "flags": "X:0 N:0 Z:1 V:0 C:0",
  "output": "Drag to paint, Shift for red, right button clears",
  "memory": "7dda7747a16c7b86"
}
