tests/corpus/snapshots/mouseWindowSize-errors.snap
---
source: src/test/corpus.rs
expression: messages
---
[
  "Error on line 42: Unknown instruction: \"start\"",
  "Error on line 44: Invalid immediate: Invalid decimal number or non existing label: versionTrap, invalid digit found in string",
  "Error on line 53: Unknown instruction: \"if\"",
  "Error on line 54: Unknown instruction: \"versiontrap\"",
  "Error on line 56: Invalid absolute: Invalid decimal number or non existing label: oldVerMsg, invalid digit found in string",
  "Error on line 60: Unknown instruction: \"endi\"",
  "Error on line 63: Invalid immediate: Invalid decimal number or non existing label: mouseDownIRQ, invalid digit found in string",
  "Error on line 64: Invalid immediate: Invalid decimal number or non existing label: mouseUpIRQ, invalid digit found in string",
  "Error on line 65: Invalid immediate: Invalid decimal number or non existing label: mouseMoveIRQ, invalid digit found in string",
  "Error on line 66: Invalid absolute: Invalid decimal number or non existing label: SR, invalid digit found in string",
  "Error on line 79: Invalid immediate: Invalid decimal number or non existing label: , cannot parse integer from empty string",
  "Error on line 86: Invalid absolute: Invalid decimal number or non existing label: heading, invalid digit found in string",
  "Error on line 89: Unknown instruction: \"loop\"",
  "Error on line 92: Unknown instruction: \"if\"",
  "Error on line 95: Unknown instruction: \"if\"",
  "Error on line 97: Invalid immediate: Invalid decimal number or non existing label: , cannot parse integer from empty string",
  "Error on line 99: Unknown instruction: \"endi\"",
  "Error on line 100: Unknown instruction: \"if\"",
  "Error on line 102: Invalid immediate: Invalid decimal number or non existing label: , cannot parse integer from empty string",
  "Error on line 104: Unknown instruction: \"endi\"",
  "Error on line 105: Unknown instruction: \"if\"",
  "Error on line 107: Invalid immediate: Invalid decimal number or non existing label: , cannot parse integer from empty string",
  "Error on line 109: Unknown instruction: \"endi\"",
  "Error on line 110: Unknown instruction: \"endi\"",
  "Error on line 112: Invalid absolute: Invalid decimal number or non existing label: loop, invalid digit found in string",
  "Error on line 119: Unknown instruction: \"cursor\"",
  "Error on line 124: Invalid immediate: Invalid decimal number or non existing label: BLACK, invalid digit found in string",
  "Error on line 128: Invalid absolute: Invalid decimal number or non existing label: cursorX, invalid digit found in string",
  "Error on line 130: Invalid absolute: Invalid decimal number or non existing label: cursorY, invalid digit found in string",
  "Error on line 146: Invalid immediate: Invalid decimal number or non existing label: LIME, invalid digit found in string",
  "Error on line 153: Invalid absolute: Invalid decimal number or non existing label: cursorX, invalid digit found in string",
  "Error on line 154: Invalid absolute: Invalid decimal number or non existing label: cursorY, invalid digit found in string",
  "Error on line 174: Unknown instruction: \"mousedownirq\"",
  "Error on line 176: Invalid absolute: Invalid decimal number or non existing label: heading, invalid digit found in string",
  "Error on line 180: Invalid absolute: Invalid decimal number or non existing label: showMouseData, invalid digit found in string",
  "Error on line 182: Unknown instruction: \"rte\"",
  "Error on line 185: Unknown instruction: \"mouseupirq\"",
  "Error on line 187: Invalid absolute: Invalid decimal number or non existing label: heading, invalid digit found in string",
  "Error on line 191: Invalid absolute: Invalid decimal number or non existing label: showMouseData, invalid digit found in string",
  "Error on line 193: Unknown instruction: \"rte\"",
  "Error on line 196: Unknown instruction: \"mousemoveirq\"",
  "Error on line 198: Invalid absolute: Invalid decimal number or non existing label: heading, invalid digit found in string",
  "Error on line 202: Invalid absolute: Invalid decimal number or non existing label: showMouseData, invalid digit found in string",
  "Error on line 204: Unknown instruction: \"rte\"",
  "Error on line 207: Unknown instruction: \"showmousedata\"",
  "Error on line 210: Invalid absolute: Invalid decimal number or non existing label: cursor, invalid digit found in string",
  "Error on line 221: Unknown instruction: \"for\"",
  "Error on line 223: Unknown instruction: \"if\"",
  "Error on line 224: Invalid absolute: Invalid decimal number or non existing label: strYes, invalid digit found in string",
  "Error on line 225: Unknown instruction: \"else\"",
  "Error on line 226: Invalid absolute: Invalid decimal number or non existing label: strNo, invalid digit found in string",
  "Error on line 227: Unknown instruction: \"endi\"",
  "Error on line 229: Unknown instruction: \"endf\"",
  "Error on line 235: Unknown instruction: \"heading\"",
  "Error on line 240: Invalid absolute: Invalid decimal number or non existing label: strHeading, invalid digit found in string",
  "Error on line 247: Unknown instruction: \"strheading\"",
  "Error on line 248: Invalid argument \"CR\" for directive dc at position 2",
  "Error on line 248: Invalid argument \"LF\" for directive dc at position 3",
  "Error on line 249: Unknown instruction: \"stryes\"",
  "Error on line 250: Unknown instruction: \"strno\"",
  "Error on line 251: Unknown instruction: \"oldvermsg\"",
  "Error on line 255: Unknown instruction: \"cursorx\"",
  "Error on line 256: Unknown instruction: \"cursory\"",
  "Error on line 263: Unknown instruction: \"end\""
]
